Fixed navbar, and adjusted z-index

--- a/style.css
+++ b/style.css
@@ -84,9 +84,17 @@
 
 main {
     background-color: black;
+    position: relative;
+    top: 55px;
 }
 
 h1 {
     font-family: fantasy, Times, sans-serif;
     font-size: 250%;
+}
+
+header {
+    position: fixed;
+    width: 100%;
+    z-index: 5;
 }
